--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "babel-jest": "^24.9.0",
     "eslint": "^5.9.0",
     "htmlhint": "^0.11.0",
-    "jest": "^24.9.0",
     "opener": "^1.5.1",
     "serve": "^11.0.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
